# MCPtrace

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_SERVER.md  SECURITY.md  plan.md  pyproject.toml  server.py  test_server.py
doc/: COMPARISON_WITH_GPTTRACE.md  GPTTRACE_FEATURES_INTEGRATION.md  IMPROVEMENT_PLAN.md  compress_to_gif.sh  mcp-bpftrace-design.md
setup/: CLAUDE_CODE_SETUP.md  SETUP.md  setup_claude.sh  setup_claude_code.sh
src/: main.rs
