[package]
name = "bpftrace-mcp-server"
version = "0.1.1"
edition = "2021"
authors = ["yunwei37 <1067852565@qq.com>"]
description = "A Model Context Protocol (MCP) server that provides AI assistants with access to bpftrace kernel tracing capabilities"
repository = "https://github.com/yunwei37/MCPtrace"
homepage = "https://github.com/yunwei37/MCPtrace"
license = "MIT"
readme = "README.md"
keywords = ["mcp", "bpftrace", "ebpf", "kernel", "tracing"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
rmcp = { version = "0.2.0", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-std", "process", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }
uuid = { version = "1.10", features = ["v4"] }
schemars = "1.0"
dashmap = "6.1"
dotenv = "0.15"

[[bin]]
name = "bpftrace-mcp-server"
path = "src/main.rs"